--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 10px; padding-left: 0px;">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold">Программа конгресса включает в себя пленарные заседания, научные симпозиумы и мастер-классы, посвященные широкому спектру вопросов, связанных с функциональными заболеваниями как у детей, так и у взрослых.</div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold">Программа конгресса включает в себя пленарные заседания, научные симпозиумы и мастер-классы, посвященные широкому спектру вопросов, связанных с функциональными заболеваниями как у детей, так и у взрослых.</div>
 </td></tr></table>
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
   <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular"><strong></strong>Вас ожидают выступления ведущих специалистов в области гастроэнтерологии, педиатрии, неврологии и других медицинских областей по различным темам:</div>
@@ -455,13 +455,13 @@
   <td align="center" style="padding-right: 40px; padding-bottom: 15px; padding-left: 40px; background-color: #ffffff; background-repeat: repeat;" class="em-mob-padding_left-20 em-mob-padding_right-20 em-mob-padding_bottom-0" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
-        <td width="120" valign="top" class="em-mob-wrap em-mob-width-100perc">
+        <td width="130" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td class="em-mob-text_align-center">
-  <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6n1ghp4omsuhid7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerutqmhpuqqss3cyh93ci6bcih5xdmzebw5uywumkmn9o3qkmh88oicsjzr17e5fkbxuzgzrptig4mfjba651rwxsen5w" width="180" border="0" alt="фото" style="display: inline-block; width: 100%; max-width: 180px;">
+  <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6jffoxcc6u85857j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerub6bkdq7cuxb1uoqo7jztdmjzu5un8tijnwr1ern7br6r3xp51k8up41bt536uywf4egrcshgqq7eo4bfxtsf5rasjw" width="180" border="0" alt="фото" style="display: inline-block; width: 100%; max-width: 180px;">
 </td></tr></table>
 </td>
-        <td width="20" class="em-mob-wrap"></td>
-        <td width="440" valign="top" class="em-mob-wrap em-mob-width-100perc">
+        <td width="15" class="em-mob-wrap"></td>
+        <td width="435" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 10px; padding-left: 0px;" class="em-mob-padding_top-10 em-mob-padding_bottom-10">
   <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold"><strong>Шабров Александр Владимирович</strong></div>
 </td></tr></table>
@@ -479,7 +479,7 @@
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular"><img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=653a1715itbiwp7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekeru3ddtzzpzpk9zwkkhrbhcoykxy799eah93nrt3pia93q9kseafnbs8h4mmbzb8jbsp1chop75if4ysu4771kpxsaxhy" width="28" border="0" alt="" style="display: inline-block; vertical-align: text-bottom;"><em>Выражаем надежду на нашу встречу 16 мая 2024 года, когда не только научная программа, но и
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular"><img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=653a1715itbiwp7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekeru3ddtzzpzpk9zwkkhrbhcoykxy799eah93nrt3pia93q9kseafnbs8h4mmbzb8jbsp1chop75if4ysu4771kpxsaxhy" width="28" border="0" alt="" style="display: inline-block; vertical-align: text-bottom;">&nbsp; &nbsp;<em>Выражаем надежду на нашу встречу 16 мая 2024 года, когда не только научная программа, но и
 доброжелательная атмосфера будут способствовать творческой активности, приобретению новых
 дружеских и научных контактов и впечатлений!</em></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
