--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold"><strong>Глубокоуважаемые коллеги,&nbsp;<br>приглашаем вас принять участие в&nbsp;VIII Российском конгрессе!</strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold" align="center"><strong>Глубокоуважаемые коллеги!<br></strong></div>
+</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px; padding-top: 15px;">
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold"><strong>Приглашаем вас принять участие в VIII Российском конгрессе!<br></strong></div>
 </td></tr></table>
 </td>
       </tr>
@@ -446,7 +448,7 @@
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold"><strong>Президент конгресса</strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #11367a;" class="em-font-Montserrat-ExtraBold"><strong>Президент конгресса</strong></div>
 </td></tr></table></td>
       </tr>
     </table>
@@ -495,7 +497,7 @@
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold"><strong>Сопредседатели научно-организационного комитета</strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #11367a;" class="em-font-Montserrat-ExtraBold"><strong>Сопредседатели научно-организационного комитета</strong></div>
 </td></tr></table></td>
       </tr>
     </table>
@@ -568,7 +570,7 @@
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold"><strong>Научные секретари конгресса</strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #11367a;" class="em-font-Montserrat-ExtraBold"><strong>Научные секретари конгресса</strong></div>
 </td></tr></table></td>
       </tr>
     </table>
@@ -641,7 +643,7 @@
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #000000;" class="em-font-Montserrat-ExtraBold"><strong>Общение и обмен опытом</strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 22px; line-height: 24px; color: #11367a;" class="em-font-Montserrat-ExtraBold"><strong>Общение и обмен опытом</strong></div>
 </td></tr></table>
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px; padding-top: 20px;" class="em-mob-padding_top-15">
   <div style="font-family: Helvetica, Arial, sans-serif; font-size: 14px; line-height: 21px; color: #000000;" class="em-font-Montserrat-Regular">На конгрессе вас ожидают не только интересные доклады и современные исследования, но и возможность встретиться с коллегами, обсудить текущие тенденции и вызовы в области функциональных заболеваний.&nbsp;</div>
